Allow clicks > 1 to navigate.

Due to a few breakages revert change
crrev.com/61ad6760f2610c6a6c4e5f40eae36e70a73cd3e9 [formerly e46f8fbfd5d2d3408d09d4262fb0f4f99c93a98f]

Invert the layout test to ensure we have consistent behaviour.

BUG=658904

Review-Url: https://codereview.chromium.org/2715353003
Cr-Commit-Position: refs/heads/master@{#453348}

Former-commit-id: 917d0b3de410cd7efc197b275ffb5d1f3ddba5b5