third_party/WebKit/Source/core/html/HTMLAnchorElement.cpp
@@ -461,9 +461,8 @@ bool isLinkClick(Event* event) {
   return (event->type() == EventTypeNames::click ||
           event->type() == EventTypeNames::auxclick) &&
          (!event->isMouseEvent() ||
-          (toMouseEvent(event)->button() !=
-               static_cast<short>(WebPointerProperties::Button::Right) &&
-           toMouseEvent(event)->detail() <= 1));
+          toMouseEvent(event)->button() !=
+              static_cast<short>(WebPointerProperties::Button::Right));
 }
 
 bool HTMLAnchorElement::willRespondToMouseClickEvents() {
